feat(secret): expose [PUT] /v1/secrets to upsert secret
